# serde-derive-next

./: Cargo.toml  README.md
.cargo/: config.toml
bench/: Cargo.toml
bench/data/: simple.rs  user.rs
bench/src/: main.rs
crates/serde_derive/: Cargo.toml
crates/serde_derive/src/: lib.rs
crates/serde_derive_impl/: Cargo.toml
crates/serde_derive_impl/src/: lib.rs
crates/serde_derive_next/: Cargo.toml
crates/serde_derive_next/src/: lib.rs
crates/serde_derive_next_impl/: Cargo.toml
crates/serde_derive_next_impl/src/: de.rs  dummy.rs  fragment.rs  lib.rs  pretend.rs  ser.rs  utils.rs
example/: Cargo.toml
example/src/: main.rs
